# Projeto-Ciclo-1-AlphaEdtech

./: README.md  example.env  exemple.env  pyproject.toml
app/: app.py  dependancies.py  style.css  teste.py
app/Pages/: Cadastro.py  Login.py
app/Pages/Adm/: Administrador.py
app/Pages/Cliente/: Carteira.py  Inicio.py  Upload.py
application/: rg_easyocr.ipynb
config/: connection.py
docs/: ConceitualProjeto2.brM3  ConceitualProjeto3.brM3  DiagramaCasoDeUsoProjeto1.asta  DiagramaClasseProjeto1.asta  FisicoProjeto1.pgerd  FisicoProjeto3.pgerd  LógicoProjeto2.brM3  LógicoProjeto3.brM3
domain/directories/: SQLProjeto.sql
repo/: documents.py  users.py
services/: CRUD projeto.py  cnh_detection.py  cnh_posprocessing.py  ocr_service.py  posprocessing.py  preprocessing.py  rg_detection.py  rg_posprocessing.py
tests/DB SQL/: SQLProjetoTeste.sql  testesBD.sql
utils/: validations.py
