[tool.poetry]
name = "ocr-project"
version = "0.1.0"
description = "Desafio: GED (Gerenciamento Eletrônico de Documentos) com OCR - Turma Hard Boole.py – Ciclo 1!"
authors = ["Cleverson Guandalin <cleversongnd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"
psycopg2 = "^2.9.9"
bcrypt = "^4.1.2"
streamlit-authenticator = "0.2.2"
deta = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
blue = "^0.9.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
